# ImgConverter

./: CHANGELOG.md  CONTRIBUTING.md  ImgConverter.spec  LOGO_PROMPTS.md  PLUGINS.md  README.md  RESEARCH.md  ROADMAP.md  conftest.py  heicshift.py  imgconverter.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
packaging/: runtime_hook_mp.py
packaging/conda-forge/: meta.yaml
packaging/installers/: README.md
tests/: conftest.py  test_features.py  test_orientation.py  test_plugins.py  test_roundtrip.py  test_sidecars.py  test_template.py
