[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgconverter"
version = "3.3.4"
description = "Universal image batch converter (PyQt6 GUI + CLI) with metadata, ICC, and HDR fidelity."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SysAdminDoc" }]
keywords = [
    "heic", "heif", "avif", "jpegxl", "jxl", "webp", "raw", "image",
    "converter", "batch", "exif", "icc", "metadata",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    # Floors pinned to close the documented CVE matrix in RESEARCH.md.
    "Pillow>=12.2.0",
    "pillow-heif>=1.4.0",
    "PyQt6>=6.8",
]

[project.optional-dependencies]
numpy = ["numpy>=1.26"]
jxl  = ["pillow-jxl-plugin>=1.3.6"]
raw  = ["rawpy>=0.27.0"]
watch = ["watchdog>=4.0"]
c2pa = ["c2pa-python>=0.6"]
all  = ["numpy>=1.26", "pillow-jxl-plugin>=1.3.6", "rawpy>=0.27.0", "watchdog>=4.0", "c2pa-python>=0.6"]
dev  = ["pytest>=7", "pyinstaller>=6.11"]

[project.urls]
Homepage = "https://github.com/SysAdminDoc/ImgConverter"
Issues   = "https://github.com/SysAdminDoc/ImgConverter/issues"
Source   = "https://github.com/SysAdminDoc/ImgConverter"

[project.scripts]
imgconverter = "imgconverter:main"

[tool.setuptools]
py-modules = ["imgconverter"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["icon.png", "icon.ico"]

[tool.pytest.ini_options]
# pytest-qt eagerly loads PySide6, which collides with PyQt6 DLLs on Windows.
# Disable the plugin globally; ImgConverter's tests never touch a live Qt event loop.
addopts = "-p no:pytestqt -v"
testpaths = ["tests"]
